# LangPedia

./: .gitignore  .pre-commit-config.yaml  README.md  backend_logs.txt  clean_install.ps1  clean_install.sh  explanation.md  langpedia.yaml  prompt.txt  pyproject.toml  requirements.txt  test_runner.py
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/api/: main.py
backend/app/engine/: runner.py
backend/app/engine/nodes/: advanced_rag_node.py  base.py  condition_node.py  loop_node.py  planning_node.py  rag_node.py  registry.py  scriptable.py  thinking_node.py
backend/app/models/: database.py
cli/langpedia/: main.py
docs/: api.md  architecture.md  cli.md  development.md  workflows_guide.md
langpedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
samples/: rag_qa.yaml
scripts/workflows/rag2/nodes/starter_node/: extract.py  store.py  vectorize.py
scripts/workflows/rag_example/nodes/retrieve_docs/: extract.py  store.py  vectorize.py
shared/: workflow.py
studio/: package-lock.json  package.json
studio/src/app/: globals.css  page.tsx
studio/src/components/: CustomNodes.tsx  WorkflowCanvas.tsx
tests/: conftest.py  run_tests.ps1  run_tests.sh
tests/test_backend/: test_api.py  test_database.py  test_nodes.py  test_runner.py
tests/test_shared/: test_workflow.py
